# DomovAI

./: .gitignore  README.md  pyproject.toml
src/domovai/: __init__.py
src/domovai/cli/: __init__.py  main.py
src/domovai/core/: __init__.py  chunker.py  loader.py
src/domovai/models/: __init__.py  code_chunk.py  source_file.py
src/domovai/server/: __init__.py  api.py
tests/: test_core.py
