[project]
name = "domovai"
version = "0.1.0"
description = "Codebase indexing and AI-powered analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "typer>=0.21.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
domovai = "domovai.cli.main:main"
